# ClawScope

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
clawscope/: __init__.py  _version.py  app.py  conversation_context.py  server.py  workspace_prompt.py
clawscope/agent/: __init__.py  a2a.py  base.py  orchestrator.py  react.py  realtime.py  user.py
clawscope/bus/: __init__.py  events.py  queue.py
clawscope/channels/: __init__.py  base.py  dingtalk.py  discord.py  feishu.py  manager.py  slack.py  telegram.py
clawscope/cli/: __init__.py  main.py
clawscope/config/: __init__.py
clawscope/exception/: __init__.py
clawscope/kernel/: __init__.py  agentscope.py  base.py  native.py
clawscope/mcp/: __init__.py  client.py  server.py  skill.py
clawscope/memory/: __init__.py  base.py  session.py  unified.py  working.py
clawscope/message/: __init__.py  adapters.py  base.py  unified.py
clawscope/model/: __init__.py  base.py  registry.py
clawscope/model/providers/: __init__.py  anthropic.py  litellm_adapter.py  openai.py
clawscope/orchestration/: __init__.py  chatroom.py  msghub.py  pipeline.py  router.py
clawscope/rag/: __init__.py  document.py  embedding.py  knowledge.py  loader.py  retriever.py  splitter.py  store.py
clawscope/sandbox/: __init__.py  base.py  config.py  docker.py  manager.py
clawscope/services/: __init__.py  cron.py  heartbeat.py  scheduler.py
clawscope/skills/: __init__.py  base.py  loader.py  marketplace.py  registry.py
clawscope/tool/: __init__.py  decorator.py  registry.py
clawscope/tool/builtin/: __init__.py  filesystem.py  shell.py  web.py
clawscope/tracing/: __init__.py
clawscope/types/: __init__.py
tests/: test_agent_react.py  test_bus.py  test_channels.py  test_chatroom.py  test_config.py  test_conversation_context.py  test_mcp.py  test_memory.py  test_message.py  test_model_registry.py  test_orchestration.py  test_orchestrator.py  test_server.py  test_workspace_prompt.py
