[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawscope"
version = "0.1.0"
description = "Unified AI Agent Platform - Combining AgentScope and Nanobot capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ClawScope Team" }
]
keywords = ["ai", "agent", "llm", "chatbot", "multi-channel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "shortuuid>=1.0.11",
    "python-dotenv>=1.0.0",

    # Async
    "asyncio-mqtt>=0.16.0",

    # JSON handling
    "json5>=0.9.0",
    "json-repair>=0.25.0",

    # LLM Providers (minimal)
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
# AgentScope features
agentscope = [
    "dashscope>=1.14.0",
    "google-generativeai>=0.4.0",
    "ollama>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

# Nanobot features
nanobot = [
    "litellm>=1.20.0",
    "croniter>=1.3.0",
]

# Channels
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.0"]
slack = ["slack-sdk>=3.20.0"]
feishu = ["lark-oapi>=1.0.0"]
dingtalk = ["dingtalk-stream>=0.24.0"]
wecom = ["wecom-aibot-sdk-python>=0.1.0"]
qq = ["qq-botpy>=1.2.0"]
matrix = ["matrix-nio>=0.20.0"]

# RAG
rag = [
    "qdrant-client>=1.6.0",
    "pymilvus>=2.3.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
]

# Realtime
realtime = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "websockets>=11.0",
]

# MCP
mcp = ["mcp>=1.0.0"]

# Memory backends
redis = ["redis>=5.0.0"]
sqlalchemy = ["sqlalchemy>=2.0.0", "aiosqlite>=0.19.0"]

# All features
all = [
    "clawscope[agentscope]",
    "clawscope[nanobot]",
    "clawscope[telegram]",
    "clawscope[discord]",
    "clawscope[slack]",
    "clawscope[feishu]",
    "clawscope[dingtalk]",
    "clawscope[rag]",
    "clawscope[realtime]",
    "clawscope[mcp]",
    "clawscope[redis]",
    "clawscope[sqlalchemy]",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
clawscope = "clawscope.cli.main:main"

[project.urls]
Homepage = "https://github.com/Jane-o-O-o-O/ClawScope"
Repository = "https://github.com/Jane-o-O-o-O/ClawScope.git"
Issues = "https://github.com/Jane-o-O-o-O/ClawScope/issues"

[tool.hatch.build.targets.wheel]
packages = ["clawscope"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
